--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.6",
